[gd_scene load_steps=58 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://camera_controller.gd" type="Script" id=2]
[ext_resource path="res://split_screen.shader" type="Shader" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://player.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/viewport_size = null
shader_param/split_active = null
shader_param/player1_position = null
shader_param/player2_position = null
shader_param/split_line_thickness = null
shader_param/split_line_color = null

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.933333, 0.0784314, 0.0784314, 1 )

[sub_resource type="CapsuleShape" id=4]
radius = 1.00505

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.0784314, 0.411765, 0.933333, 1 )

[sub_resource type="SpatialMaterial" id=6]

[sub_resource type="PlaneMesh" id=7]
material = SubResource( 6 )
size = Vector2( 200, 200 )

[sub_resource type="BoxShape" id=8]

[sub_resource type="BoxShape" id=9]

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.986259, 0.925681, 0.86168, 1 )

[sub_resource type="CubeMesh" id=11]

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.0157246, 0.614518, 0.655769, 1 )

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.763619, 0.81656, 0.8189, 1 )

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.838479, 0.225506, 0.7848, 1 )

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.306646, 0.197984, 0.175443, 1 )

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0.051961, 0.476168, 0.381371, 1 )

[sub_resource type="SpatialMaterial" id=17]
albedo_color = Color( 0.817832, 0.686439, 0.434, 1 )

[sub_resource type="SpatialMaterial" id=18]
albedo_color = Color( 0.646348, 0.679158, 0.870667, 1 )

[sub_resource type="SpatialMaterial" id=19]
albedo_color = Color( 0.876495, 0.921738, 0.526445, 1 )

[sub_resource type="SpatialMaterial" id=20]
albedo_color = Color( 0.308703, 0.873857, 0.0555805, 1 )

[sub_resource type="SpatialMaterial" id=21]
albedo_color = Color( 0.643844, 0.83117, 0.845126, 1 )

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 0.355191, 0.82697, 0.732479, 1 )

[sub_resource type="SpatialMaterial" id=23]
albedo_color = Color( 0.55911, 0.179656, 0.231, 1 )

[sub_resource type="SpatialMaterial" id=24]
albedo_color = Color( 0.851414, 0.687831, 0.558395, 1 )

[sub_resource type="SpatialMaterial" id=25]
albedo_color = Color( 0.641439, 0.29455, 0.0790996, 1 )

[sub_resource type="SpatialMaterial" id=26]
albedo_color = Color( 0.913605, 0.527365, 0.0273088, 1 )

[sub_resource type="SpatialMaterial" id=27]
albedo_color = Color( 0.624077, 0.38607, 0.437502, 1 )

[sub_resource type="SpatialMaterial" id=28]
albedo_color = Color( 0.131713, 0.338535, 0.755734, 1 )

[sub_resource type="SpatialMaterial" id=29]
albedo_color = Color( 0.276686, 0.333996, 0.828323, 1 )

[sub_resource type="SpatialMaterial" id=30]
albedo_color = Color( 0.541099, 0.438874, 0.712908, 1 )

[sub_resource type="SpatialMaterial" id=31]
albedo_color = Color( 0.380535, 0.803732, 0.209771, 1 )

[sub_resource type="SpatialMaterial" id=32]
albedo_color = Color( 0.126314, 0.709734, 0.0164386, 1 )

[sub_resource type="SpatialMaterial" id=33]
albedo_color = Color( 0.49361, 0.468504, 0.157615, 1 )

[sub_resource type="SpatialMaterial" id=34]
albedo_color = Color( 0.274165, 0.942253, 0.849562, 1 )

[sub_resource type="SpatialMaterial" id=35]
albedo_color = Color( 0.347486, 0.584437, 0.225516, 1 )

[sub_resource type="SpatialMaterial" id=36]
albedo_color = Color( 0.225798, 0.311725, 0.309325, 1 )

[sub_resource type="SpatialMaterial" id=37]
albedo_color = Color( 0.842594, 0.892209, 0.0356995, 1 )

[sub_resource type="SpatialMaterial" id=38]
albedo_color = Color( 0.92367, 0.171486, 0.408749, 1 )

[sub_resource type="SpatialMaterial" id=39]
albedo_color = Color( 0.336233, 0.653918, 0.387106, 1 )

[sub_resource type="SpatialMaterial" id=40]
albedo_color = Color( 0.607486, 0.479636, 0.586784, 1 )

[sub_resource type="SpatialMaterial" id=41]
albedo_color = Color( 0.927793, 0.626894, 0.208025, 1 )

[sub_resource type="SpatialMaterial" id=42]
albedo_color = Color( 0.575574, 0.410205, 0.327027, 1 )

[sub_resource type="SpatialMaterial" id=43]
albedo_color = Color( 0.0871603, 0.700764, 0.28863, 1 )

[sub_resource type="SpatialMaterial" id=44]
albedo_color = Color( 0.866886, 0.35821, 0.682459, 1 )

[sub_resource type="SpatialMaterial" id=45]
albedo_color = Color( 0.255698, 0.875034, 0.425944, 1 )

[sub_resource type="SpatialMaterial" id=46]
albedo_color = Color( 0.28945, 0.951987, 0.343104, 1 )

[sub_resource type="SpatialMaterial" id=47]
albedo_color = Color( 0.243248, 0.0532221, 0.411054, 1 )

[sub_resource type="SpatialMaterial" id=48]
albedo_color = Color( 0.362858, 0.765753, 0.257076, 1 )

[sub_resource type="SpatialMaterial" id=49]
albedo_color = Color( 0.0804409, 0.255526, 0.951721, 1 )

[sub_resource type="SpatialMaterial" id=50]
albedo_color = Color( 0.0437972, 0.745342, 0.18698, 1 )

[sub_resource type="SpatialMaterial" id=51]
albedo_color = Color( 0.770645, 0.287346, 0.739309, 1 )

[sub_resource type="SpatialMaterial" id=52]
albedo_color = Color( 0.791675, 0.946163, 0.317723, 1 )

[node name="World" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, -0.818651, 0.574291, 0, -0.574291, -0.818651, 0, 70.567, -72.3668 )
shadow_enabled = true
shadow_color = Color( 0.6, 0.6, 0.6, 1 )

[node name="Cameras" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="View" type="TextureRect" parent="Cameras"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport1" type="Viewport" parent="Cameras"]
size = Vector2( 100, 100 )
msaa = 2
usage = 3
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera1" type="Camera" parent="Cameras/Viewport1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0 )
current = true

[node name="Viewport2" type="Viewport" parent="Cameras"]
size = Vector2( 100, 100 )
msaa = 2
usage = 3
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera2" type="Camera" parent="Cameras/Viewport2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0 )
current = true

[node name="Player1" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )
script = ExtResource( 5 )

[node name="Mesh" type="MeshInstance" parent="Player1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Player1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Player2" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.18358, 1.25, 3.01882 )
script = ExtResource( 5 )
player_id = 2

[node name="Mesh" type="MeshInstance" parent="Player2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Player2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Ground" type="StaticBody" parent="."]

[node name="Mesh" type="MeshInstance" parent="Ground"]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 200, 0, 0, 0, 1, 0, 0, 0, 200, 0, -1, 0 )
shape = SubResource( 8 )

[node name="Walls" type="Spatial" parent="."]

[node name="Group1" type="Spatial" parent="Walls"]

[node name="Wall1" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall1"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall1" groups=[
"walls",
]]
material_override = SubResource( 10 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall2"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall2" groups=[
"walls",
]]
material_override = SubResource( 12 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall3"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall3" groups=[
"walls",
]]
material_override = SubResource( 13 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall4"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall4" groups=[
"walls",
]]
material_override = SubResource( 14 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall5"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall5" groups=[
"walls",
]]
material_override = SubResource( 15 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall6"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall6" groups=[
"walls",
]]
material_override = SubResource( 16 )
mesh = SubResource( 11 )
material/0 = null

[node name="Group2" type="Spatial" parent="Walls"]
transform = Transform( 0.988065, 0, -0.154039, 0, 1, 0, 0.154039, 0, 0.988065, -22.59, 0, -3.1796 )

[node name="Wall1" type="StaticBody" parent="Walls/Group2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall1"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall1" groups=[
"walls",
]]
material_override = SubResource( 17 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall2"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall2" groups=[
"walls",
]]
material_override = SubResource( 18 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall3"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall3" groups=[
"walls",
]]
material_override = SubResource( 19 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall4"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall4" groups=[
"walls",
]]
material_override = SubResource( 20 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall5"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall5" groups=[
"walls",
]]
material_override = SubResource( 21 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall6"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall6" groups=[
"walls",
]]
material_override = SubResource( 22 )
mesh = SubResource( 11 )
material/0 = null

[node name="Group3" type="Spatial" parent="Walls"]
transform = Transform( 0.905096, 0, 0.425207, 0, 1, 0, -0.425207, 0, 0.905096, -12.7693, 0, 17.7449 )

[node name="Wall1" type="StaticBody" parent="Walls/Group3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall1"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall1" groups=[
"walls",
]]
material_override = SubResource( 23 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall2"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall2" groups=[
"walls",
]]
material_override = SubResource( 24 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall3"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall3" groups=[
"walls",
]]
material_override = SubResource( 25 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall4"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall4" groups=[
"walls",
]]
material_override = SubResource( 26 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall5"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall5" groups=[
"walls",
]]
material_override = SubResource( 27 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall6"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall6" groups=[
"walls",
]]
material_override = SubResource( 28 )
mesh = SubResource( 11 )
material/0 = null

[node name="Group4" type="Spatial" parent="Walls"]
transform = Transform( 0.155702, 0, -0.987804, 0, 1, 0, 0.987804, 0, 0.155702, 14.0374, 0, 12.1476 )

[node name="Wall1" type="StaticBody" parent="Walls/Group4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall1"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall1" groups=[
"walls",
]]
material_override = SubResource( 29 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall2"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall2" groups=[
"walls",
]]
material_override = SubResource( 30 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall3"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall3" groups=[
"walls",
]]
material_override = SubResource( 31 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall4"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall4" groups=[
"walls",
]]
material_override = SubResource( 32 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall5"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall5" groups=[
"walls",
]]
material_override = SubResource( 33 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall6"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall6" groups=[
"walls",
]]
material_override = SubResource( 34 )
mesh = SubResource( 11 )
material/0 = null

[node name="Group5" type="Spatial" parent="Walls"]
transform = Transform( 0.999549, 0, 0.0300306, 0, 1, 0, -0.0300306, 0, 0.999549, 0.500639, 0, 27.6888 )

[node name="Wall1" type="StaticBody" parent="Walls/Group5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall1"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall1" groups=[
"walls",
]]
material_override = SubResource( 35 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall2"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall2" groups=[
"walls",
]]
material_override = SubResource( 36 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall3"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall3" groups=[
"walls",
]]
material_override = SubResource( 37 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall4"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall4" groups=[
"walls",
]]
material_override = SubResource( 38 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall5"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall5" groups=[
"walls",
]]
material_override = SubResource( 39 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall6"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall6" groups=[
"walls",
]]
material_override = SubResource( 40 )
mesh = SubResource( 11 )
material/0 = null

[node name="Group6" type="Spatial" parent="Walls"]
transform = Transform( 0.613129, 0, -0.789983, 0, 1, 0, 0.789983, 0, 0.613129, 21.2586, 0, -14.244 )

[node name="Wall1" type="StaticBody" parent="Walls/Group6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall1"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall1" groups=[
"walls",
]]
material_override = SubResource( 41 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall2"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall2" groups=[
"walls",
]]
material_override = SubResource( 42 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall3"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall3" groups=[
"walls",
]]
material_override = SubResource( 43 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall4"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall4" groups=[
"walls",
]]
material_override = SubResource( 44 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall5"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall5" groups=[
"walls",
]]
material_override = SubResource( 45 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall6"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall6" groups=[
"walls",
]]
material_override = SubResource( 46 )
mesh = SubResource( 11 )
material/0 = null

[node name="Group7" type="Spatial" parent="Walls"]
transform = Transform( -0.999329, 0, -0.0366257, 0, 1, 0, 0.0366257, 0, -0.999329, -8.83615, 0, -32.7996 )

[node name="Wall1" type="StaticBody" parent="Walls/Group7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall1"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall1" groups=[
"walls",
]]
material_override = SubResource( 47 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall2"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall2" groups=[
"walls",
]]
material_override = SubResource( 48 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall3"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall3" groups=[
"walls",
]]
material_override = SubResource( 49 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall4"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall4" groups=[
"walls",
]]
material_override = SubResource( 50 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall5"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall5" groups=[
"walls",
]]
material_override = SubResource( 51 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall6"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall6" groups=[
"walls",
]]
material_override = SubResource( 52 )
mesh = SubResource( 11 )
material/0 = null
